# PythonLessons2024_AI

./: .gitignore  README.md  ai_parser_main.py  demo.py  main.py  main_simple.py  pyproject.toml  test_comprehensive.py  test_formatting.py  test_parser.py
agents/: fixed_pollinations.py  universal_agents.py
config/: constants.py
core/: models.py  universal_generator.py
demo_files/: README.md  demo_square_20250606_130844.py
generated_code/: .gitkeep
generated_code/generated_task_1/: task_1_extract_digits_20241220_143022.py  task_3_list_comprehension_20241220_143155.py
generated_code/generated_task_2/: task_1_banking_system_20241220_144022.py
tasks/: task_1.txt  task_2.txt  task_3.txt  task_4.txt
